fixing the functions